kubernetes-monitoring/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: homework
spec:
  selector:
    app: nginx
  ports:
    - protocol: TCP
      targetPort: 8000
      port: 80
      name: http
    - protocol: TCP
      port: 9113
      targetPort: 9113
      name: metrics
  type: ClusterIP
